test/zinc_source/compile_errors/callables/07_lambda_capture_nested_local.zn
// expected-error: captured outer variable 'y' cannot change type after capture
fn main() {
    if true {
        y = 2
        f = fn() {
            return y
        }
        y = "oops"
        print(f())
    }
}
